PyMaker/datas/object2/RawHTML/i3001/Python_DOC_referPages.python-try-and-except-statements-custom-and-normal-exception-output.txt
<div class="post-text" itemprop="text">
<p>When throwing an exception how do I get the compiler to throw my custom exception AND the compiler exception.
Here is an example of what I want to happen</p>
<pre><code>def func_A(int)
    try: 
        ans = 1 + int 
        print(ans)
    except:
        print('Oops your input was wrong')

def func_B(int)
    ans = 1 + int 
    print(ans)
</code></pre>
<p>Input_A:</p>
<pre><code>func_A('Hello_World')
</code></pre>
<p>Output_A:</p>
<pre><code>'Oops your input was wrong'
</code></pre>
<p>Input_B:</p>
<pre><code>func_B('Hello_World')
</code></pre>
<p>Output_B:</p>
<pre><code>File "&lt;ipython-input-5-fe7d28575c18&gt;", line 2
def func_B(int)
               ^
SyntaxError: invalid syntax
</code></pre>
<p>Desired Output:</p>
<pre><code>'Oops your input was wrong'

File "&lt;ipython-input-5-fe7d28575c18&gt;", line 2
def func_B(int)
           ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Try adding a <code>raise</code> to the end of your except to raise the exception again, like this:</p>
<pre><code>def func_A(int):
    try:
        ans = 1 + int
        print(ans)
    except:
        print('Oops your input was wrong')
        raise

func_A('Hello_World')
</code></pre>
<p>Output:</p>
<pre><code>Oops your input was wrong
Traceback (most recent call last):
  File "/home/ashish/s.py", line 15, in &lt;module&gt;
    func_A('Hello_World')
  File "/home/ashish/s.py", line 3, in func_A
    ans = 1 + int
TypeError: unsupported operand type(s) for +: 'int' and 'str'
</code></pre>
</div>
<span class="comment-copy"><a href="https://docs.python.org/3/tutorial/errors.html#errors-and-exceptions" rel="nofollow noreferrer">Errors and Exceptions</a> in the Tutorial.</span>
<span class="comment-copy">Your example is missing colons at the end of the function definition statements.</span>
<span class="comment-copy">Thank you! That is exactly what I wanted.</span>
<span class="comment-copy">user9995331: See <a href="https://stackoverflow.com/help/someone-answers">What should I do when someone answers my question?</a></span>
